# rrinlog

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md  azure-pipelines.yml  logs.db  rrinlog-server.service  rrinlog.service
.github/: dependabot.yml
benches/: rrinlog.rs
migrations/2017-11-03-205734_create_logs/: up.sql
rrinlog/: Cargo.toml
rrinlog-server/: Cargo.toml
rrinlog-server/src/: api.rs  dao.rs  errors.rs  main.rs  options.rs
rrinlog/src/: main.rs  options.rs
src/: lib.rs  main.rs  models.rs  options.rs  parser.rs  schema.rs
test-assets/: test-access.db
