[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "rrinlog_core"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
failure = "0.1.1"
regex = "0.2.2"
lazy_static = "1.0.0"

[dependencies.diesel]
features = ["sqlite"]
version = "0.99.0"

[dependencies.diesel_infer_schema]
features = ["sqlite"]
version = "0.99.0"

[dependencies.libsqlite3-sys]
features = ["bundled"]
version = "0.8.1"

[features]
unstable = []

[workspace]
members = [
    "rrinlog",
    "rrinlog-server",
]
