[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "rrinlog-server"
version = "0.1.1"

[dependencies]
env_logger = "0.6.1"
failure = "0.1.5"
itertools = "0.8.0"
log = "0.4.8"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
structopt = "0.3"

[dependencies.actix-web]
version = "1"
default-features = false
features = ["fail"]

[dependencies.uom]
version = "0.25.0"
features = ["i64", "si"]

[dependencies.chrono]
features = ["serde"]
version = "0.4.9"

[dependencies.diesel]
features = ["sqlite"]
version = "1"

[dependencies.rrinlog_core]
path = ".."

[dev-dependencies]
actix-http-test = "0.2"
actix-http = "0.2"
