[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "rrinlog-server"
version = "0.1.1"

[dependencies]
env_logger = "0.7.1"
failure = "0.1.8"
itertools = "0.9.0"
log = "0.4.11"
serde = "1.0.114"
serde_derive = "1.0.103"
serde_json = "1.0.55"
structopt = "0.3"

[dependencies.actix-web]
version = "1"
default-features = false
features = ["fail"]

[dependencies.uom]
version = "0.31.0"
features = ["i64", "si"]

[dependencies.chrono]
features = ["serde"]
version = "0.4.11"

[dependencies.diesel]
features = ["sqlite"]
version = "1"

[dependencies.rrinlog_core]
path = ".."

[dev-dependencies]
actix-http-test = "0.2"
actix-http = "0.2"
