[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "rrinlog"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
env_logger = "0.4.3"
failure = "0.1.1"
log = "0.3.8"
structopt = "0.1.5"
structopt-derive = "0.1.5"

[dependencies.diesel]
features = ["sqlite"]
version = "1"

[dependencies.rrinlog_core]
path = ".."

[dev-dependencies]
assert_cli = "0.5.4"
environment = "0.1.1"
tempdir = "0.3.5"
